<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:id="@+id/postazioneTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="Postazione n.1"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="10dp">

            <RadioButton android:id="@+id/radioIndet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blocco Indeterminato"/>

            <RadioButton android:id="@+id/radioDet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blocco determinato"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="25dp"
                android:id="@+id/bloccoDeterminato">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/oraFineTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Ora Inizio:"
                        android:layout_gravity="center"
                        android:textSize="18dp"/>

                    <Spinner
                        android:id="@+id/oraInizioSpinner"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        android:textSize="20dp"
                        android:verticalScrollbarPosition="right" />

                    <TextView
                        android:id="@+id/oraInizioTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Ora Fine:"
                        android:textSize="18dp"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"/>

                    <Spinner
                        android:id="@+id/oraFineSpinner"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="2"
                        android:background="@android:drawable/btn_dropdown"
                        android:spinnerMode="dropdown"
                        android:textSize="20dp"
                        android:verticalScrollbarPosition="right" />

                </LinearLayout>

                <DatePicker
                    android:id="@+id/datePickerBlocco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:datePickerMode="spinner"
                    android:calendarViewShown="false"/>

            </LinearLayout>

            <Button
                android:id="@+id/buttonBlocco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#146DDA"
                android:textColor="@color/white"
                android:text="Blocca"
                android:textSize="20dp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</ScrollView>