<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:background="#CCCCCC">

        <TextView
            android:id="@+id/idPostazione"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="1"
            android:textColor="@color/black"
            android:textSize="50sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bloccoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:backgroundTint="#D9364F"
                android:text="Blocca"
                android:textColor="@color/white"
                android:textSize="10dp"/>

            <Button
                android:id="@+id/sbloccoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:backgroundTint="#146DDA"
                android:text="Sblocca"
                android:textColor="@color/white"
                android:textSize="10dp"/>

            <Button
                android:id="@+id/cancellaPosButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:backgroundTint="#D9364F"
                android:text="Cancella"
                android:textColor="@color/white"
                android:textSize="10dp"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>