<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Email:"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/utenteADTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data Inizio: "
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dataInizioADTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019-11-20" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Data Fine: "
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dataFineADTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2019-11-20" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/attivaButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="#146DDA"
                android:text="Attiva"
                android:textColor="@color/white"
                android:textSize="10dp" />

            <Button
                android:id="@+id/concludiButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:backgroundTint="#D9364F"
                android:text="Concludi"
                android:textColor="@color/white"
                android:textSize="10dp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>