...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/mgmtPrestitoButton"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="#146DDA"
            android:drawableLeft="@drawable/bookstack"
            android:text="Gestione Libri"
            android:textColor="@color/white"
            android:textSize="13sp"  />

        <Button
            android:id="@+id/mgmtPrenotazioneButton"
            android:layout_width="fill_parent"
...
